plugins {
    id 'org.springframework.boot' apply false
    id 'com.github.johnrengelman.shadow' apply false
//    id 'com.learning.gradle.springboot' version "3.0.0" apply false
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'io.spring.dependency-management'

    group = 'com.czy'
    archivesBaseName = "learning-${project.name}"
    version = '3.0.0-SNAPSHOT'
    targetCompatibility = JavaVersion.VERSION_17
    sourceCompatibility = JavaVersion.VERSION_17

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    dependencyManagement {
        generatedPomCustomization {
            enabled = false
        }
        imports {
            mavenBom org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES
            mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            mavenBom "com.alibaba.cloud:spring-cloud-alibaba-dependencies:${springCloudAliVersion}"
        }
        dependencies {
            dependency "commons-io:commons-io:2.11.0"
            dependency "org.apache.commons:commons-collections4:4.4"
            dependency "commons-validator:commons-validator:1.7"

            dependency 'com.clickhouse:clickhouse-jdbc:0.3.2'
            dependency "org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.1"
            dependency 'com.github.pagehelper:pagehelper-spring-boot-starter:1.4.6'
            dependency "com.baomidou:mybatis-plus-boot-starter:3.5.3.1"

            dependency("org.redisson:redisson-spring-boot-starter:3.19.2") {
                exclude "org.springframework.boot:spring-boot-starter-web"
            }

            dependency "io.minio:minio:8.5.1"
            dependency "com.xuxueli:xxl-job:2.3.1"
            dependency "org.mapstruct:mapstruct:1.5.3.Final"
            dependency "org.mapstruct:mapstruct-processor:1.5.3.Final"
            dependency "org.projectlombok:lombok-mapstruct-binding:0.2.0"

            dependency "io.micrometer:micrometer-registry-prometheus:1.10.3"
            dependency "io.github.mweirauch:micrometer-jvm-extras:0.2.2"

            dependency "com.alibaba:easyexcel:3.2.0"
            dependency "org.apache.pulsar:pulsar-client:2.11.0"

            dependency "org.openjdk.jol:jol-core:0.16"
            dependency "cglib:cglib:3.3.0"

        }
    }

    dependencies {
        implementation "org.mapstruct:mapstruct", "org.projectlombok:lombok"
        annotationProcessor "org.mapstruct:mapstruct-processor", "org.projectlombok:lombok", "org.projectlombok:lombok-mapstruct-binding"
        testImplementation "org.mapstruct:mapstruct", "org.projectlombok:lombok"
        testAnnotationProcessor "org.mapstruct:mapstruct-processor", "org.projectlombok:lombok", "org.projectlombok:lombok-mapstruct-binding"
    }

    test {
        useJUnitPlatform()
    }

    jar {
        into("META-INF/maven/${project.group}/${project.name}") {
            from { generatePomFileForMavenJavaPublication }
            rename ".*", "pom.xml"
        }

        afterEvaluate {
            manifest {
                attributes 'Implementation-Title': archiveBaseName
                attributes 'Implementation-Version': archiveVersion
                attributes 'Built-Tool': "gradle-" + gradle.gradleVersion
                attributes 'Build-OS': System.getProperty("os.name")
                attributes 'Built-By': System.getProperty("user.name")
                attributes 'Build-Jdk': System.getProperty("java.version")
                attributes 'Build-Time': LocalDateTime.now().format("yyyy-MM-dd HH:mm:ss")
            }
        }
    }

    java {
        withSourcesJar()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                artifactId = archivesBaseName
                from components.java
                versionMapping {
                    usage('java-api') {
                        fromResolutionOf('runtimeClasspath')
                    }
                    usage('java-runtime') {
                        fromResolutionResult()
                    }
                }
            }
        }
    }

    if (name.startsWith("spring")) {
        apply plugin: "spring.build"
    }
    if (name.startsWith("flink")) {
        apply plugin: "flink.build"
    }
}